# model-meditations

./: .gitignore  CLAUDE_CODE_PLAN.md  SCRATCHPAD_PLAN.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml
eval/: __init__.py  capabilities.py  drift.py  judge.py  sycophancy.py
scripts/: analyze.py  calibrate.py  demo.py  extract_axis.py  run_eval.py  setup_runpod.sh  topic_sanity_check.py
src/llm_meditation/: __init__.py  axis.py  calibration.py  descriptions.py  extract_axis.py  injection.py  meditation.py  model.py  sae.py  scratchpad.py  utils.py
